# garminconnect-mcp-pypi

./: .gitignore  CHANGELOG.md  PYPI_RELEASE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish-to-pypi.yml
docs/: claude-desktop.md  msty-studio.md  pypi-uvx.md
garminconnect_mcp/: __init__.py  auth.py  client.py  server.py  strength.py
tests/: test_client.py  test_server.py
