[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "garmin-connect-mcp-server"
version = "0.1.6"
description = "Model Context Protocol server for Garmin Connect"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = "GPL-3.0-or-later"
authors = [
  { name = "Bojan Makivic" }
]
keywords = ["garmin", "garminconnect", "mcp", "model-context-protocol"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
]
dependencies = [
  "garminconnect>=0.3.3",
  "mcp[cli]>=1.2",
  "tzdata>=2024.1; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.8",
  "mypy>=1.14",
]

[project.scripts]
garmin-connect-mcp-server = "garminconnect_mcp.server:main"
garmin-connect-mcp-server-auth = "garminconnect_mcp.auth:main"
garminconnect-mcp = "garminconnect_mcp.server:main"
garminconnect-mcp-auth = "garminconnect_mcp.auth:main"

[project.urls]
Homepage = "https://github.com/BojanMakivic/garminconnect-mcp-pypi"
Documentation = "https://github.com/BojanMakivic/garminconnect-mcp-pypi#readme"
Repository = "https://github.com/BojanMakivic/garminconnect-mcp-pypi"
Issues = "https://github.com/BojanMakivic/garminconnect-mcp-pypi/issues"

[tool.setuptools.packages.find]
include = ["garminconnect_mcp*"]

[tool.setuptools.package-data]
garminconnect_mcp = ["data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
